--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,116 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
-    
+
+    <header class="header">
+        <div class="header-top about">
+            <div class="container">
+                <div class="about__inner">
+                    <ul class="about__list about__list--support">
+                        <li class="about__item about__item--contact">
+                            <a class="about__link" href="#">адрес и время доставки</a>
+                        </li>
+                        <li class="about__item about__item--phone">
+                            <a class="about__link" href="#">горячая линия 24/7</a>
+                        </li>
+                    </ul>
+
+                    <ul class="about__list">
+                        <li class="about__item about__item--info">
+                            <a class="about__link" href="#">доставка</a>
+                        </li>
+                        <li class="about__item about__item--info">
+                            <a class="about__link" href="#">о нас</a>
+                        </li>
+                        <li class="about__item about__item--info">
+                            <a class="about__link" href="#">новости</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <nav class="menu">
+            <div class="container">
+                <div class="menu__inner">
+                    <a class="logo" href="#logo">
+                        <span class="logo__img">
+                            <img src="images/logo.png" alt="логотип сайта">
+                        </span>
+                        <span class="logo-text">
+                            фрешок <span> онлайн-маркет</span>
+                        </span> 
+                    </a>
+                    <div class="menu__nav">
+                        Каталог продуктов
+                        <!-- <ul class="menu__list">
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Овощи и фрукты</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Бакалея</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Молочные продукты</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Хлеб</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Мясо</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Колбаса</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Рыба</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Алкоголь</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Напитки</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Торты</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Мясо</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Чай, кофе</a>
+                        </li>
+                    </ul>
+                    <button type="button"> </button>-->
+                    </div>
+                    <form class="search">
+                        <input class="search__input" type="text" placeholder="Найти в магазине ..." required>
+                        <button class="search__btn" type="submit">
+                            поиск
+                        </button>
+                    </form>
+                    <ul class="box">
+                        <li class="box__item">
+                            <a class="box__list" href="" style="background-image: url('images/icon/user.svg');"></a>
+                        </li>
+                        <li class="box__item" >
+                            <a class="box__list" href="" style="background-image: url('images/icon/favorite.svg');"></a>
+                        </li>
+                        <li class="box__item">
+                            <a class="box__list" href=""  style="background-image: url('images/icon/basket.svg');"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+    </header>
 
 
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
 </body>
+
 </html>
