--- a/app/index.html
+++ b/app/index.html
@@ -5,118 +5,117 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ФрешОЛ</title>
+    <link rel="icon" href="images/favicons/favicon-16x16.png" type="png">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
 
     <header class="header">
-        <div class="header-top about">
+        <div class="header-info">
             <div class="container">
-                <div class="about__inner">
-                    <ul class="about__list about__list--support">
-                        <li class="about__item about__item--contact">
-                            <a class="about__link" href="#">адрес и время доставки</a>
-                        </li>
-                        <li class="about__item about__item--phone">
-                            <a class="about__link" href="#">горячая линия 24/7</a>
-                        </li>
-                    </ul>
-
-                    <ul class="about__list">
-                        <li class="about__item about__item--info">
-                            <a class="about__link" href="#">доставка</a>
-                        </li>
-                        <li class="about__item about__item--info">
-                            <a class="about__link" href="#">о нас</a>
-                        </li>
-                        <li class="about__item about__item--info">
-                            <a class="about__link" href="#">новости</a>
-                        </li>
-                    </ul>
-                </div>
+                <ul class="header-info__list">
+                    <li class="header-info__item">
+                        <a class="header-info__link" href="#">адрес и время доставки</a>
+                    </li>
+                    <li class="header-info__item">
+                        <a class="header-info__link" href="#">горячая линия 24/7</a>
+                    </li>
+                    <li class="header-info__item">
+                        <a class="header-info__link" href="#">доставка</a>
+                    </li>
+                    <li class="header-info__item">
+                        <a class="header-info__link" href="#">о нас</a>
+                    </li>
+                    <li class="header-info__item">
+                        <a class="header-info__link" href="#">новости</a>
+                    </li>
+                </ul>
             </div>
         </div>
-
-        <nav class="menu">
+        <nav class="nav">
             <div class="container">
-                <div class="menu__inner">
-                    <a class="logo" href="#logo">
-                        <span class="logo__img">
-                            <img src="images/logo.png" alt="логотип сайта">
-                        </span>
-                        <span class="logo-text">
-                            фрешок <span> онлайн-маркет</span>
-                        </span> 
+                <div class="nav__inner">
+                    <a class="logo" href="#">
+                        <img src="images/logo.svg" alt="логотип сайта">
                     </a>
-                    <div class="menu__nav">
-                        Каталог продуктов
-                        <!-- <ul class="menu__list">
-                        <li class="menu__item">
-                            <a class="menu__link" href="#">Овощи и фрукты</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="#">Бакалея</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="#">Молочные продукты</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="#">Хлеб</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="#">Мясо</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="#">Колбаса</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="#">Рыба</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="#">Алкоголь</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="#">Напитки</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="#">Торты</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="#">Мясо</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="#">Чай, кофе</a>
-                        </li>
-                    </ul>
-                    <button type="button"> </button>-->
-                    </div>
-                    <form class="search">
-                        <input class="search__input" type="text" placeholder="Найти в магазине ..." required>
-                        <button class="search__btn" type="submit">
-                            поиск
-                        </button>
+                    <button class="nav__catalog btn-mark" type="button">Каталог продуктов</button>
+
+                    <form class="form">
+                        <label class="form__label">
+                            <input class="form__fild" type="search" name="search" placeholder="Найти в магазине ...">
+                        </label>
+                        <button class="form__btn button" type="submit">поиск</button>
                     </form>
-                    <ul class="box">
-                        <li class="box__item">
-                            <a class="box__list" href="" style="background-image: url('images/icon/user.svg');"></a>
+                    <ul class="nav-user">
+                        <li class="nav-user__item">
+                            <h2 class="sr-only">входв кабинет</h2>
+                            <a href="#" class="nav-user__link"></a>
                         </li>
-                        <li class="box__item" >
-                            <a class="box__list" href="" style="background-image: url('images/icon/favorite.svg');"></a>
+                        <li class="nav-user__item">
+                            <h2 class="sr-only">любимые товары</h2>
+                            <a href="#" class="nav-user__link"></a>
                         </li>
-                        <li class="box__item">
-                            <a class="box__list" href=""  style="background-image: url('images/icon/basket.svg');"></a>
+                        <li class="nav-user__item">
+                            <h2 class="sr-only">корзина покупок</h2>
+                            <a href="#" class="nav-user__link"></a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-
     </header>
+    <main>
+        <section class="slider">
+            <div class="slider__item" style="background-image: url('images/content/slider-img1.png');">
+                <div class="container">
+                    <div class="slider__inner">
+                        <h1 class="slider__title">
+                            СВЕЖАЧОК ВАМ в ХАТУ <span>Скидка -50%</span>
+                        </h1>
+                        <p>Только с 7 по 13 июля скидка на сезонные фрукты и овощи до 50%. Торопитесь!</p>
+                        <button class="slider__btn button" type="button">Купить сейчас</button>
+                    </div>
+                </div>
+            </div>
+            <div class="slider__item" style="background-image: url('images/content/slider-img1.png');">
+                <div class="container">
+                    <div class="slider__inner">
+                        <h1 class="slider__title">
+                            СВЕЖАЧОК ВАМ в ХАТУ <span>Скидка -50%</span>
+                        </h1>
+                        <p>Только с 7 по 13 июля скидка на сезонные фрукты и овощи до 50%. Торопитесь!</p>
+                        <button class="slider__btn button" type="button">Купить сейчас</button>
+                    </div>
+                </div>
+            </div>
+            <div class="slider__item" style="background-image: url('images/content/slider-img1.png');">
+                <div class="container">
+                    <div class="slider__inner">
+                        <h1 class="slider__title">
+                            СВЕЖАЧОК ВАМ в ХАТУ <span>Скидка -50%</span>
+                        </h1>
+                        <p>Только с 7 по 13 июля скидка на сезонные фрукты и овощи до 50%. Торопитесь!</p>
+                        <button class="slider__btn button" type="button">Купить сейчас</button>
+                    </div>
+                </div>
+            </div>
+
+        </section>
 
 
-    <script src="js/libs.min.js"></script>
+
+
+
+
+
+
+
+    </main>
+
+
+   <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
